crates/rimap-content/tests/snapshots/snapshots__snapshot_one@multipart-bomb.snap
---
source: crates/rimap-content/tests/snapshots.rs
expression: value
---
{
  "error": "content limit exceeded: mime_depth (limit=8)",
  "error_kind": "LimitExceeded"
}
