crates/rimap-content/tests/snapshots/snapshots__snapshot_one@nested-rfc822.snap
---
source: crates/rimap-content/tests/snapshots.rs
expression: value
---
{
  "meta": {
    "attachments": [
      {
        "content_id": null,
        "content_type": "message/rfc822",
        "filename": null,
        "is_inline": false,
        "size_bytes": 188
      }
    ],
    "body_truncated": false,
    "cc": [],
    "date": null,
    "from": "forwarder@example.com",
    "in_reply_to": null,
    "mailing_list": null,
    "message_id": null,
    "original_size_bytes": 396,
    "references": [],
    "subject": "FWD: original message",
    "to": []
  },
  "security_warnings": [],
  "untrusted": {
    "alternate_parts": [],
    "body_html": null,
    "body_text": "See forwarded message below."
  }
}
