crates/rimap-content/tests/snapshots/snapshots__snapshot_one@trojan-source-bidi.snap
---
source: crates/rimap-content/tests/snapshots.rs
expression: value
---
{
  "meta": {
    "attachments": [],
    "body_truncated": false,
    "cc": [],
    "date": null,
    "from": "a@example.com",
    "in_reply_to": null,
    "mailing_list": null,
    "message_id": null,
    "original_size_bytes": 133,
    "references": [],
    "reply_to": null,
    "subject": "filename.txt.exe",
    "to": []
  },
  "security_warnings": [
    {
      "code": "unicode_bidi_override_stripped",
      "detail": "count=1",
      "location": "header:subject"
    },
    {
      "code": "unicode_bidi_override_stripped",
      "detail": "count=2",
      "location": "body:text[0]"
    }
  ],
  "untrusted": {
    "alternate_parts": [],
    "body_html": null,
    "body_text": "Look at this file: safeevil.txt\n"
  }
}
